# housing

./: Makefile  README.md  Sprint_2_Visualizations.ipynb  Sprint_3.ipynb  Sprint_3_Regression.ipynb  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
housing/: __init__.py  dataset.py  features.py  plots.py
housing/modeling/: predict.py  train.py
